--- a/courses/app/views/admin_students_details.scala.html
+++ b/courses/app/views/admin_students_details.scala.html
@@ -21,10 +21,10 @@
   </div>
   <div class="modal-body">
     <p>
-      You're about to suspend this student: do you wish to continue?
+      If you proceed with this operation you will suspend this student: do you wish to continue?
     </p>
     <a data-dismiss="modal" href="#" class="btn btn-large">Cancel</a>
-    <a href="@routes.Admins.suspendStudent(selectedStudent.userID.longValue)" class="btn btn-primary btn-large">Suspend student</a>
+    <a href="@routes.Admins.suspendStudent(selectedStudent.userID.longValue)" class="btn btn-primary btn-large">Suspend the student</a>
   </div>
 </div>
 
