--- a/courses/app/views/advisor_watchStudent.scala.html
+++ b/courses/app/views/advisor_watchStudent.scala.html
@@ -18,7 +18,7 @@
         <h3>Reject study plan</h3>
     </div>
     <div class="modal-body">
-        Insert a comment for denying this study plan; it will be send to the student by e-mail
+        Insert a comment to reject this study plan; it will be send to the student by e-mail
         <br/>
         <form method="POST" action="@routes.Supervisors.rejectSP()">
             <fieldset>
