--- a/courses/app/views/advisor_base.scala.html
+++ b/courses/app/views/advisor_base.scala.html
@@ -2,16 +2,16 @@
 
 @main {
 
-<!-- left side -->
+<!-- left side of the page -->
 
 <ul class="nav nav-list">
   <li class="nav-header"><font size="4" face="Courier">Students</font></li>
-  <!-- show it only if there are pendent approval requests -->
+  <!-- show it only if there are pending approval requests -->
   @if(user.getSupervisor().getApprovalRequests() > 0) {
     @if(user.getSupervisor().getApprovalRequests() == 1) {
-      <li>@user.getSupervisor().getApprovalRequests() pendent approval request</li>
+      <li>@user.getSupervisor().getApprovalRequests() pending approval request</li>
     } else {
-      <li>@user.getSupervisor().getApprovalRequests() pendent approval requests</li>
+      <li>@user.getSupervisor().getApprovalRequests() pending approval requests</li>
     }
   }
   <br />
