--- a/courses/app/views/students_base.scala.html
+++ b/courses/app/views/students_base.scala.html
@@ -18,7 +18,7 @@
 
 } {
 
-Loggato come: @user.userName - <a href="@routes.Authentication.logout()">Logout</a>
+Logged in as: @user.userName - <a href="@routes.Authentication.logout()">Logout</a>
 
 } {
 
