fix stato study plan nella pagina studente

--- a/courses/app/views/advisor_watchStudent.scala.html
+++ b/courses/app/views/advisor_watchStudent.scala.html
@@ -28,7 +28,7 @@
                 <textarea name="comment-text" id="comment" rows="5" cols="40"></textarea>
             </fieldset>
             <br />
-            <div class="actions">
+            <div 
                 <input data-dismiss="modal" type="button" class="btn primary" value="Annulla">
                 <input type="submit" class="btn primary" value="Conferma">
             </div>
@@ -153,4 +153,4 @@
  
 <!-- script advisor_watchStudent -->
 
-}
+}class="actions">
