--- a/courses/app/views/index.scala.html
+++ b/courses/app/views/index.scala.html
@@ -29,7 +29,6 @@
         </p>
       } 
       <fieldset>
-        <legend>LOGIN</legend>
         <div class="control-group">
           <label class="control-label" for="Username">Username</label>
           <div class="controls">
@@ -40,15 +39,12 @@
           <label class="control-label" for="Psw">Password</label>
           <div class="controls">
             <input type="password" class="input-xlarge" name="password" id="password" placeholder="password">   
-            <p class="help-block">
-              UnitnItc
-            </p>
           </div>
         </div>
       </fieldset>
-      <div>
-        <input data-dismiss="modal" type="reset" value="cancella">
-        <input type="submit" value="login">
+      <div align="left" class="actions">
+        <input data-dismiss="modal" type="reset" class="btn btn-large" value="Cancel">
+        <input type="submit" class="btn btn-large btn-primary" value="Login">
       </div>
       <!-- </form>-->
     } 
@@ -64,7 +60,7 @@
 
 } { <!-- Parte centrale -->
 
-<h1>Aggiungi qualcosa quil</h1>
+<h1>Aggiungi qualcosa qui</h1>
 
 } { @authstate } {
  
