--- a/courses/app/views/advisor_watchStudent.scala.html
+++ b/courses/app/views/advisor_watchStudent.scala.html
@@ -28,9 +28,9 @@
                 <textarea name="comment-text" id="comment" rows="5" cols="40"></textarea>
             </fieldset>
             <br />
-            <div 
-                <input data-dismiss="modal" type="button" class="btn primary" value="Annulla">
-                <input type="submit" class="btn primary" value="Conferma">
+            <div> 
+                <input data-dismiss="modal" type="button" class="btn btn-large" value="Annulla">
+                <input type="submit" class="btn btn-large btn-primary" value="Conferma">
             </div>
         </form>
     </div>
