visualizza solo corsi a cuin non sono ancora stati dati voti

--- a/courses/app/views/professor_courses.scala.html
+++ b/courses/app/views/professor_courses.scala.html
@@ -27,7 +27,7 @@
             <td>@course.printActualStartDate</td>
             <td>
               <a data-toggle="modal" href="@routes.Professors.results(course.courseID.longValue)">
-                <img src="@routes.Assets.at("images/details.png")" />
+                Insert marks
               </a>
             </td>
           </tr>
