--- a/courses/app/views/advisor_base.scala.html
+++ b/courses/app/views/advisor_base.scala.html
@@ -38,10 +38,10 @@
 } {
 <!---central part -->
 
-<div class="row-fluid">
+<!--<div class="row-fluid">-->
   @centralLeftContents
   @centralRightContents
-<div>
+<!--<div>-->
 
 } {
 
