--- a/courses/app/views/advisor_watchStudent.scala.html
+++ b/courses/app/views/advisor_watchStudent.scala.html
@@ -29,8 +29,8 @@
             </fieldset>
             <br />
             <div> 
-                <input data-dismiss="modal" type="button" class="btn btn-large" value="Annulla">
-                <input type="submit" class="btn btn-large btn-primary" value="Conferma">
+                <input data-dismiss="modal" type="button" class="btn btn-large" value="Cancel">
+                <input type="submit" class="btn btn-large btn-primary" value="Confirm">
             </div>
         </form>
     </div>
@@ -54,17 +54,14 @@
                 <textarea name="comment-text" rows="5" cols="40"></textarea>
             </fieldset>
             <div class="actions">
-                <input data-dismiss="modal" type="button" class="btn primary" value="Annulla">
-                <input type="submit" class="btn primary" value="Conferma">
+                <input data-dismiss="modal" type="button" class="btn primary" value="Cancel">
+                <input type="submit" class="btn primary" value="Confirm">
             </div>
         </form>
     </div>
 </div>
 
-<!-- Fine modal -->
-
-<!-- Parte dx-->
-<!--<div class="row-fluid">-->
+<div class="row-fluid">
     <div class="span6">
         <h2 align="center">@selectedStudent.fullName's Study Plan</h2>
        
@@ -155,7 +152,7 @@
         <br />
         <br />
     </div><!--span1 -->
-<!--</div>-->
+</div>
 
 } {
  
