fix interfaccia grafica

--- a/courses/app/views/admin_students.scala.html
+++ b/courses/app/views/admin_students.scala.html
@@ -30,9 +30,12 @@
       }
     </tbody>
   </table>
-  <a data-toggle="modal" href="#windowTitleDialog_mailtoSR" class="btn btn-primary">Warn students who haven’t yet presented the study plan</a>
-  <a data-toggle="modal" href="#windowTitleDialog_newStudent" class="btn btn-primary">Create new student</a>
-  <a data-toggle="modal" href="@routes.Admins.suspendedStudents" class="btn btn-primary">View suspended students</a>
+  <p align="left">
+    <a data-toggle="modal" href="#windowTitleDialog_mailtoSR" class="btn btn-primary">Warn students who haven’t yet presented the study plan</a></p>
+  <p align="center">
+    <a data-toggle="modal" href="#windowTitleDialog_newStudent" class="btn btn-primary">Create new student</a></p>
+  <p align="center"> 
+    <a data-toggle="modal" href="@routes.Admins.suspendedStudents" class="btn btn-primary">View suspended students</a></p>
   <br />
   <br />
 </div><!--span1 -->
