--- a/courses/app/views/admin_courses.scala.html
+++ b/courses/app/views/admin_courses.scala.html
@@ -38,17 +38,14 @@
       }
     </tbody>
   </table>
-  <p align="right">
-    <a data-toggle="modal" href="#windowTitleDialog_newInternalCourse" class="btn btn-primary btn-large">Add new inner course</a>
-    <a data-toggle="modal" href="#windowTitleDialog_newcourse" class="btn btn-primary btn-large">Add new extern course</a>
-    <a data-toggle="modal" href="@routes.Admins.oldcourses()" class="btn btn-primary btn-large">Show old courses</a>
+  <p align="left">
+    <a data-toggle="modal" href="#windowTitleDialog_newInternalCourse" class="btn btn-primary">Add new inner course</a>
+    <a data-toggle="modal" href="#windowTitleDialog_newcourse" class="btn btn-primary ">Add new extern course</a></p>
+  <p align ="left">  
+    <a data-toggle="modal" href="@routes.Admins.oldcourses()" class="btn btn-primary ">Show old courses</a></p>
     <br />
     <br />
 </div><!--span1 -->
-
-<div class="span6">
-  <h2>Filter</h2>
-</div>
 
 <!-- modal new internal course -->
 
