--- a/courses/app/views/admin_course_details.scala.html
+++ b/courses/app/views/admin_course_details.scala.html
@@ -113,8 +113,8 @@
         <input type="hidden" value="@courseForm("courseID").value" name="courseID"/>
     </fieldset>
     <div class="actions">
-      <a data-dismiss="modal" href="@routes.Admins.courses()" class="btn btn-large">Cancel</a>
-      <input type="submit" class="btn btn-large btn-primary" value="Submit">
+      <a data-dismiss="modal" href="@routes.Admins.courses()" class="btn">Cancel</a>
+      <input type="submit" class="btn btn-primary" value="Submit">
     </div>
     }
 
