--- a/courses/app/views/admin_courses.scala.html
+++ b/courses/app/views/admin_courses.scala.html
@@ -8,7 +8,7 @@
 
 } {
 
-<div class="span6">
+<!-- <div class="span6"> -->
   <h2>Courses</h2>
   <table class="table table-bordered">
     <thead>
@@ -38,14 +38,13 @@
       }
     </tbody>
   </table>
-  <p align="left">
+  <p align="center">
     <a data-toggle="modal" href="#windowTitleDialog_newInternalCourse" class="btn btn-primary">Add new inner course</a>
-    <a data-toggle="modal" href="#windowTitleDialog_newcourse" class="btn btn-primary ">Add new extern course</a></p>
-  <p align ="left">  
+    <a data-toggle="modal" href="#windowTitleDialog_newcourse" class="btn btn-primary ">Add new extern course</a> 
     <a data-toggle="modal" href="@routes.Admins.oldcourses()" class="btn btn-primary ">Show old courses</a></p>
     <br />
     <br />
-</div><!--span1 -->
+<!--</div><!--span1 --> 
 
 <!-- modal new internal course -->
 
@@ -147,8 +146,8 @@
         <input type="hidden" value="1" name="isInManifesto"/>
       </fieldset>
     <div class="actions">
-      <a data-dismiss="modal" href="#" class="btn btn-large">Cancel</a>
-      <input type="submit" class="btn btn-large btn-primary" value="Submit">
+      <a data-dismiss="modal" href="#" class="btn">Cancel</a>
+      <input type="submit" class="btn btn-primary" value="Submit">
     </div>
   }
   </div>
