--- a/courses/app/views/admin_credentials.scala.html
+++ b/courses/app/views/admin_credentials.scala.html
@@ -26,8 +26,8 @@
         }
       </tbody>
     </table>
-  <p align="right">
-    <a data-toggle="modal" href="#windowTitleDialog_newUsercredential" class="btn btn-primary btn-large">Create New Credential</a>
+  <p align="center">
+    <a data-toggle="modal" href="#windowTitleDialog_newUsercredential" class="btn btn-primary">Create New Credential</a>
     <br />
     <br />
   </p>
@@ -49,8 +49,8 @@
       }
     </tbody>
   </table>
-  <p align="right">
-    <a data-toggle="modal" href="#windowTitleDialog_newRole" class="btn btn-primary btn-large">Create New Role</a>
+  <p align="center">
+    <a data-toggle="modal" href="#windowTitleDialog_newRole" class="btn btn-primary">Create New Role</a>
     <br />
     <br />
   </p>
@@ -87,8 +87,8 @@
         )
       </fieldset>
     <div class="actions">
-      <a data-dismiss="modal" href="#" class="btn btn-large">Cancel</a>
-      <input type="submit" class="btn btn-large btn-primary" value="Submit">
+      <a data-dismiss="modal" href="#" class="btn">Cancel</a>
+      <input type="submit" class="btn btn-primary" value="Submit">
     </div>
   }
   </div>
@@ -112,8 +112,8 @@
         )
       </fieldset>
     <div class="actions">
-      <a data-dismiss="modal" href="#" class="btn btn-large">Cancel</a>
-      <input type="submit" class="btn btn-large btn-primary" value="Submit">
+      <a data-dismiss="modal" href="#" class="btn">Cancel</a>
+      <input type="submit" class="btn btn-primary" value="Submit">
     </div>
   }
   </div>
