--- a/courses/app/views/common_editableSP.scala.html
+++ b/courses/app/views/common_editableSP.scala.html
@@ -50,9 +50,13 @@
           <th>Professor</th>
           <th>Type</th>
           <th>Start Date</th>
-          @if(user.getStudent().isPlanApproved == 0) {
-            <th></th>
+          @if(user.isStudent()) {
+            @if(user.getStudent().isPlanApproved == 0) {
+              <th></th>
             }
+          } else {
+            <th></th>
+          }
         </tr>
       </thead>
       <tbody>
@@ -67,34 +71,48 @@
                 <img src="@routes.Assets.at("images/details.png")" />
               </a>
             </td>
-            @if(user.getStudent().isPlanApproved == 0) {
+            @if(user.isStudent()) {
+              @if(user.getStudent().isPlanApproved == 0) {
+                <td>
+                  <a href="/student/rmfromsp/@course.courseID/@selectedStudent.userID">
+                    <img src="@routes.Assets.at("images/removeicon.gif")" />
+                  </a>
+                </td>
+              }
+            } else {
               <td>
-                <a href="/student/rmfromsp/@course.courseID/@selectedStudent.userID">
-                  <img src="@routes.Assets.at("images/removeicon.gif")" />
-                </a>
-              </td>
+                  <a href="/student/rmfromsp/@course.courseID/@selectedStudent.userID">
+                    <img src="@routes.Assets.at("images/removeicon.gif")" />
+                  </a>
+                </td>
             }
           </tr>
         }
       </tbody>
     </table>
-    @if(user.getStudent().isPlanApproved == 0) {
+    @if(user.isStudent()) {
+      @if(user.getStudent().isPlanApproved == 0) {
       <p align="center">
-        @if(user.isStudent()) {
-          <a data-toggle="modal" href="#windowTitleDialog_newExternCourse" class="btn btn-primary btn-large">Add extern course</a>
-        }
-        @if(user.isStudent()) {
-          <a data-toggle="modal" href="@routes.Students.appreq()" class="btn btn-primary btn-large">Ask for approval</a>
-        }
-      </p>  
-    } else {
-      @if(user.getStudent().isPlanApproved == 2) {
-        <p align="center">
           @if(user.isStudent()) {
-            <a data-toggle="modal" href="@routes.Students.modifyStudyplan()" class="btn btn-primary btn-large">Modify study plan</a>
+            <a data-toggle="modal" href="#windowTitleDialog_newExternCourse" class="btn btn-primary ">Add extern course</a>
           }
-        </p>  
-      } 
+          @if(user.isStudent()) {
+            <a data-toggle="modal" href="@routes.Students.appreq()" class="btn btn-primary ">Ask for approval</a></p>
+           }
+      </p>
+      } else {
+        @if(user.getStudent().isPlanApproved == 2) {
+          <p align="center">
+            @if(user.isStudent()) {
+              <a data-toggle="modal" href="@routes.Students.modifyStudyplan()" class="btn btn-primary ">Modify study plan</a>
+            }
+          </p>  
+        } 
+      }
+    } else {
+     <p align="center">
+      <a data-toggle="modal" href="#windowTitleDialog_newExternCourse" class="btn btn-primary ">Add extern course</a>
+     </p>
     }
   </div><!--span1 -->
 
@@ -127,13 +145,21 @@
                 <img src="@routes.Assets.at("images/details.png")" />
               </a>
             </td>
-            @if(user.getStudent().isPlanApproved == 0) {
-              <td>
-                <a href="/student/addtosp/@course.courseID/@selectedStudent.userID">
-                  <img src="@routes.Assets.at("images/addicon.png")" />
-                </a>
-              </td>
-            }
+            @if(user.isStudent()) {
+              @if(user.getStudent().isPlanApproved == 0) {
+                <td>
+                  <a href="/student/addtosp/@course.courseID/@selectedStudent.userID">
+                    <img src="@routes.Assets.at("images/addicon.png")" />
+                  </a>
+                </td>
+              }
+           } else {
+                <td>
+                  <a href="/student/addtosp/@course.courseID/@selectedStudent.userID">
+                    <img src="@routes.Assets.at("images/addicon.png")" />
+                  </a>
+                </td>
+           }
           </tr>
         }
       </tbody>
