--- a/courses/app/views/index.scala.html
+++ b/courses/app/views/index.scala.html
@@ -43,8 +43,8 @@
         </div>
       </fieldset>
       <div align="left" class="actions">
-        <input data-dismiss="modal" type="reset" class="btn btn-large" value="Cancel">
-        <input type="submit" class="btn btn-large btn-primary" value="Login">
+        <input data-dismiss="modal" type="reset" class="btn" value="Cancel">
+        <input type="submit" class="btn btn-primary" value="Login">
       </div>
       <!-- </form>-->
     } 
