--- a/courses/app/views/studentdetails.scala.html
+++ b/courses/app/views/studentdetails.scala.html
@@ -123,8 +123,8 @@
    <input type="hidden" value="@studentForm("user.usercredentialID").value" name="user.usercredentialID"/>
     </fieldset>
     <div class="actions">
-      <a data-dismiss="modal" href="#" class="btn btn-large">Cancel</a>
-      <input type="submit" class="btn btn-large btn-primary" value="Submit">
+      <a data-dismiss="modal" href="#" class="btn">Cancel</a>
+      <input type="submit" class="btn btn-primary" value="Submit">
     </div>
     }
 
