--- a/courses/app/views/students_studyplans.scala.html
+++ b/courses/app/views/students_studyplans.scala.html
@@ -29,7 +29,7 @@
     <p>
       @displayAppReqModal
     </p>
-    <a data-dismiss="modal" href="#" class="btn btn-primary btn-large">Ok</a>
+    <a data-dismiss="modal" href="#" class="btn btn-primary">Ok</a>
   </div>
     
 </div>
