--- a/courses/app/views/advisor_watchStudent.scala.html
+++ b/courses/app/views/advisor_watchStudent.scala.html
@@ -29,8 +29,8 @@
             </fieldset>
             <br />
             <div> 
-                <input data-dismiss="modal" type="button" class="btn btn-large" value="Cancel">
-                <input type="submit" class="btn btn-large btn-primary" value="Confirm">
+                <input data-dismiss="modal" type="button" class="btn" value="Cancel">
+                <input type="submit" class="btn btn-primary" value="Confirm">
             </div>
         </form>
     </div>
@@ -54,8 +54,8 @@
                 <textarea name="comment-text" rows="5" cols="40"></textarea>
             </fieldset>
             <div class="actions">
-                <input data-dismiss="modal" type="button" class="btn primary" value="Cancel">
-                <input type="submit" class="btn primary" value="Confirm">
+                <input data-dismiss="modal" type="button" class="btn" value="Cancel">
+                <input type="submit" class="btn btn-primary" value="Confirm">
             </div>
         </form>
     </div>
@@ -92,8 +92,8 @@
           <br />
           @if(selectedStudent.isPlanApproved == 1) {
             <p align="center">
-                <button data-toggle="modal" href="#windowTitleDialog_rejectSP" class="btn btn-large">Reject</button>
-                <button data-toggle="modal" href="#windowTitleDialog_acceptSP" class="btn btn-large">Accept</button>
+                <button data-toggle="modal" href="#windowTitleDialog_rejectSP" class="btn btn-primary">Reject</button>
+                <button data-toggle="modal" href="#windowTitleDialog_acceptSP" class="btn btn-primary">Accept</button>
             </p>
           }
         } else {
