--- a/courses/app/views/externcourseform.scala.html
+++ b/courses/app/views/externcourseform.scala.html
@@ -36,8 +36,8 @@
             )
         </fieldset>
         <div class="actions">
-            <a data-dismiss="modal" href="#" class="btn btn-large">Cancel</a>
-            <input type="submit" class="btn btn-large btn-primary" value="Submit">
+            <a data-dismiss="modal" href="#" class="btn">Cancel</a>
+            <input type="submit" class="btn btn-primary" value="Submit">
         </div>
 
     }
