--- a/courses/app/views/index.scala.html
+++ b/courses/app/views/index.scala.html
@@ -58,9 +58,11 @@
   
 </div> <!--modal hide fade-->
 
-} { <!-- Parte centrale -->
-
-<h1>Aggiungi qualcosa qui</h1>
+} { 
+<h3> Welcome </h3>
+<br />
+<br />
+<h3> This is the ICT Doctoral School home page. </h3>
 
 } { @authstate } {
  
