--- a/courses/app/views/index.scala.html
+++ b/courses/app/views/index.scala.html
@@ -59,10 +59,8 @@
 </div> <!--modal hide fade-->
 
 } { 
-<h3> Welcome </h3>
-<br />
-<br />
-<h3> This is the ICT Doctoral School home page. </h3>
+<iframe src="http://ict.unitn.it/announcements" width="100%" height="1000">
+</iframe>
 
 } { @authstate } {
  
