fixed db, aggiunto messaggio!

--- a/courses/app/views/examResultsform.scala.html
+++ b/courses/app/views/examResultsform.scala.html
@@ -2,13 +2,13 @@
 
 @import helper._
 @import helper.twitterBootstrap._
-      <legend>Account informations</legend>
       <table class="table table-bordered">
         <thead>
           <tr>
             <th>Student</th>
             <th>Grade</th>
-            <th>Result</th>
+            <th>Passed</th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
