cambio email, prova notification

--- a/courses/app/views/admin_students.scala.html
+++ b/courses/app/views/admin_students.scala.html
@@ -54,7 +54,7 @@
       This form will send a notification by e-mail to urge all the students who haven't defined a study plan yet.<br />Do you wish to continue?
     </p>
     <a data-dismiss="modal" href="#" class="btn">Cancel</a>
-    <a data-dismiss="modal" href="#" class="btn btn-primary">Send notification</a>
+    <a href="@routes.Admins.warnStudents()" class="btn btn-primary">Send notification</a>
   </div>
 </div>
 
