--- a/courses/app/views/admin_students.scala.html
+++ b/courses/app/views/admin_students.scala.html
@@ -1,4 +1,4 @@
-@(user: UserCredentials, students: List[Student], newStudentForm: Form[Student])
+@(user: UserCredentials, students: List[Student], newStudentForm: Form[Student], msgpopup :String)
 
 @import helper._
 @import helper.twitterBootstrap._
@@ -56,6 +56,26 @@
     <a data-dismiss="modal" href="#" class="btn">Cancel</a>
     <a href="@routes.Admins.warnStudents()" class="btn btn-primary">Send notification</a>
   </div>
+</div>
+
+<!-- modal msgpopup -->
+
+<div class="modal hide fade" id="windowTitleDialog_msgpopup" style="display: none; ">
+
+    <div class="modal-header">
+    <a href="#" class="close" data-dismiss="modal">
+      <img src="@routes.Assets.at("images/logounitn.jpg")"  height = "90" width = "90" />
+    </a>
+    <h3></h3>
+  </div>
+
+  <div class="modal-body">
+    <p>
+      @msgpopup
+    </p>
+    <a data-dismiss="modal" href="#" class="btn btn-primary">Ok</a>
+  </div>
+    
 </div>
 
 <!-- modal create student -->
@@ -230,5 +250,13 @@
 } {
 
 <!-- script admin_students -->
+
+@if(msgpopup != "") {
+  <script language="JavaScript">
+  function autofun() {
+    $('#windowTitleDialog_msgpopup').modal('show')
+  }
+  </script>
+}
 
 }
