--- a/courses/app/views/professor_courses.scala.html
+++ b/courses/app/views/professor_courses.scala.html
@@ -2,6 +2,14 @@
 
 @main {
 
+@if(Secured.isSupervisor(user)) {
+    <ul class="nav nav-list">
+      <li class="nav-header"><font size="4" face="Courier">Advisor</font></li>
+      <li>
+        <a href="@routes.Supervisors.index()">Back to the advisor's pages</a>
+      </li>
+    </ul>
+}
 
 } {
 
